--- a/client/src/styles/CarDetailPage.css
+++ b/client/src/styles/CarDetailPage.css
@@ -72,3 +72,25 @@ th, td {
 th {
     background-color: #f2f2f2;
 }
+
+.button-container{
+    position: relative;
+    left: 30em;
+    top: 2em;
+}
+
+.button-container button {
+    background-color: #fafafa;
+    height: 4em;
+    width: 4em;
+    border-radius: 1em;
+    border: transparent;
+    cursor: pointer;
+}
+
+.datas input{
+    height: 3rem;
+    border-radius: 0%;
+    padding: 1rem;
+    border: #fafafa;
+}
