--- a/client/src/styles/CarDetailPage.css
+++ b/client/src/styles/CarDetailPage.css
@@ -94,3 +94,9 @@ th {
     padding: 1rem;
     border: #fafafa;
 }
+
+.vertical-menu {
+    width: 300px !important;
+    background-color: #f4f4f4;
+    border: transparent;
+}
