--- a/client/src/styles/EditarCarPage.css
+++ b/client/src/styles/EditarCarPage.css
@@ -24,7 +24,9 @@ body {
 }
 
 .vertical-menu {
-    width: 100%;
+    width: 300px !important;
+    background-color: #f4f4f4;
+    border: transparent;
 }
 
 .car-content {
