--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -24,7 +24,7 @@
   }
   
   .vertical-menu {
-    width: 100%;
+    width: 300px !important;
     background-color: #f4f4f4;
     border: transparent;
   }
