--- a/client/src/styles/Pedidos.css
+++ b/client/src/styles/Pedidos.css
@@ -1,3 +1,9 @@
-table{
+table {
     text-align: center;
+}
+
+.vertical-menu {
+    width: 300px !important;
+    background-color: #f4f4f4;
+    border: transparent;
 }
